fixing scrolling issue on mobile

--- a/code/adviceapp.css
+++ b/code/adviceapp.css
@@ -14,6 +14,7 @@
 body {
     background-color: var(--dark-blue);
     min-height: 100vh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
